--- a/CANNEDPI_SW_GSUSB_CANFD.ioc
+++ b/CANNEDPI_SW_GSUSB_CANFD.ioc
@@ -26,14 +26,6 @@ FDCAN3.IPParameters=NominalPrescaler,NominalTimeSeg1,DataPrescaler,DataTimeSeg1,
 FDCAN3.NominalPrescaler=10
 FDCAN3.NominalTimeSeg1=13
 FDCAN3.ProtocolException=ENABLE
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,configUSE_NEWLIB_REENTRANT,configLIBRARY_LOWEST_INTERRUPT_PRIORITY,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
-FREERTOS.Queues01=queue_to_host,16,struct gs_host_frame,0,Dynamic,NULL,NULL;queue_from_host,16,struct gs_host_frame,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=task_main,24,2048,start_task_main,Default,NULL,Dynamic,NULL,NULL;task_serial_com,8,128,start_task_serial_comm,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configLIBRARY_LOWEST_INTERRUPT_PRIORITY=15
-FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
-FREERTOS.configTOTAL_HEAP_SIZE=16384
-FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
@@ -42,73 +34,71 @@ KeepUserPlacement=false
 Mcu.Family=STM32G4
 Mcu.IP0=FDCAN1
 Mcu.IP1=FDCAN2
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP12=USB
+Mcu.IP10=USART2
+Mcu.IP11=USB
 Mcu.IP2=FDCAN3
-Mcu.IP3=FREERTOS
-Mcu.IP4=I2C3
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM6
-Mcu.IP9=UART4
-Mcu.IPNb=13
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IP8=UART4
+Mcu.IP9=USART1
+Mcu.IPNb=12
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PA15
-Mcu.Pin14=PC10
-Mcu.Pin15=PC11
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB8-BOOT0
-Mcu.Pin19=PB9
+Mcu.Pin10=PC9
+Mcu.Pin11=PA8
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PB5
 Mcu.Pin2=PC4
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin21=VP_SYS_VS_tim1
-Mcu.Pin22=VP_SYS_VS_DBSignals
-Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB8-BOOT0
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin24=VP_SYS_VS_DBSignals
+Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PC5
-Mcu.Pin4=PB12
-Mcu.Pin5=PB13
-Mcu.Pin6=PC8
-Mcu.Pin7=PC9
-Mcu.Pin8=PA8
-Mcu.Pin9=PA11
-Mcu.PinsNb=24
+Mcu.Pin4=PB11
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PC8
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C3_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.I2C3_EV_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:true\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:true\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:true\:false\:true\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.USB_LP_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UART4_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.USB_LP_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -125,16 +115,28 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA8.Mode=FDCAN_Activate
 PA8.Signal=FDCAN3_RX
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=LED2
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB12.Mode=FDCAN_Activate
 PB12.Signal=FDCAN2_RX
 PB13.Mode=FDCAN_Activate
 PB13.Signal=FDCAN2_TX
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LED1
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LED3
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=LED1
+PB5.GPIO_Label=LED1_LEGACY
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LED2
+PB6.GPIO_Label=LED2_LEGACY
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB8-BOOT0.Mode=FDCAN_Activate
@@ -239,8 +241,6 @@ USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim1.Mode=TIM1
