--- a/CANNEDPI_SW_GSUSB_CANFD.ioc
+++ b/CANNEDPI_SW_GSUSB_CANFD.ioc
@@ -47,33 +47,41 @@ Mcu.IP9=USART1
 Mcu.IPNb=12
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin10=PC9
-Mcu.Pin11=PA8
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PC10
-Mcu.Pin18=PC11
-Mcu.Pin19=PB5
-Mcu.Pin2=PC4
-Mcu.Pin20=PB6
-Mcu.Pin21=PB8-BOOT0
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_SYS_VS_tim1
-Mcu.Pin24=VP_SYS_VS_DBSignals
-Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin3=PC5
-Mcu.Pin4=PB11
-Mcu.Pin5=PB12
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PC8
-Mcu.PinsNb=26
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PC8
+Mcu.Pin16=PC9
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA11
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8-BOOT0
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_tim1
+Mcu.Pin32=VP_SYS_VS_DBSignals
+Mcu.Pin33=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB2
+Mcu.Pin9=PB10
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -92,35 +100,53 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:true\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:false\:false
 NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:true\:false\:true\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UART4_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.USB_LP_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA11.Locked=true
 PA11.Mode=Device
 PA11.Signal=USB_DM
+PA12.Locked=true
 PA12.Mode=Device
 PA12.Signal=USB_DP
+PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
 PA15.Mode=FDCAN_Activate
 PA15.Signal=FDCAN3_TX
+PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA8.Locked=true
 PA8.Mode=FDCAN_Activate
 PA8.Signal=FDCAN3_RX
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=RPI_SENSE
+PA9.Locked=true
+PA9.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=FDCAN3_TERM_EN
+PB10.Locked=true
+PB10.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=LED2
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB12.Locked=true
 PB12.Mode=FDCAN_Activate
 PB12.Signal=FDCAN2_RX
+PB13.Locked=true
 PB13.Mode=FDCAN_Activate
 PB13.Signal=FDCAN2_TX
 PB14.GPIOParameters=GPIO_Label
@@ -131,6 +157,10 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=LED3
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=FDCAN2_TERM_EN
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LED1_LEGACY
 PB5.Locked=true
@@ -139,22 +169,46 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=LED2_LEGACY
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=FDCAN1_TERM_EN
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8-BOOT0.Locked=true
 PB8-BOOT0.Mode=FDCAN_Activate
 PB8-BOOT0.Signal=FDCAN1_RX
+PB9.Locked=true
 PB9.Mode=FDCAN_Activate
 PB9.Signal=FDCAN1_TX
+PC10.Locked=true
 PC10.Mode=LIN
 PC10.Signal=UART4_TX
+PC11.Locked=true
 PC11.Mode=LIN
 PC11.Signal=UART4_RX
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.Locked=true
 PC4.Mode=Asynchronous
 PC4.Signal=USART1_TX
+PC5.Locked=true
 PC5.Mode=Asynchronous
 PC5.Signal=USART1_RX
+PC8.Locked=true
 PC8.Mode=I2C
 PC8.Signal=I2C3_SCL
+PC9.Locked=true
 PC9.Mode=I2C
 PC9.Signal=I2C3_SDA
+PF0-OSC_IN.Locked=true
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Locked=true
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -183,7 +237,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-true-HAL-false,4-MX_FDCAN2_Init-FDCAN2-true-HAL-false,5-MX_FDCAN3_Init-FDCAN3-true-HAL-false,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_USB_PCD_Init-USB-true-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-true-HAL-false,4-MX_FDCAN2_Init-FDCAN2-true-HAL-false,5-MX_FDCAN3_Init-FDCAN3-true-HAL-false,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_USB_PCD_Init-USB-true-HAL-false,12-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADC12Freq_Value=160000000
 RCC.ADC345Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -209,11 +263,10 @@ RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
 RCC.I2SFreq_Value=160000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANCLockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANCLockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
 RCC.PLLN=20
