--- a/CANNEDPI_SW_GSUSB_CANFD.ioc
+++ b/CANNEDPI_SW_GSUSB_CANFD.ioc
@@ -28,23 +28,25 @@ FDCAN3.NominalTimeSeg1=13
 FDCAN3.ProtocolException=ENABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C3.IPParameters=Timing
+I2C3.IPParameters=Timing,OwnAddress
+I2C3.OwnAddress=0x68
 I2C3.Timing=0x30909DEC
 KeepUserPlacement=false
 Mcu.Family=STM32G4
 Mcu.IP0=FDCAN1
 Mcu.IP1=FDCAN2
-Mcu.IP10=USART2
-Mcu.IP11=USB
+Mcu.IP10=USART1
+Mcu.IP11=USART2
+Mcu.IP12=USB
 Mcu.IP2=FDCAN3
 Mcu.IP3=I2C3
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=UART4
-Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IP6=RTC
+Mcu.IP7=SYS
+Mcu.IP8=TIM6
+Mcu.IP9=UART4
+Mcu.IPNb=13
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -72,16 +74,18 @@ Mcu.Pin28=PB7
 Mcu.Pin29=PB8-BOOT0
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_tim1
-Mcu.Pin32=VP_SYS_VS_DBSignals
-Mcu.Pin33=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_RTC_VS_RTC_Calendar
+Mcu.Pin33=VP_SYS_VS_tim1
+Mcu.Pin34=VP_SYS_VS_DBSignals
+Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PC4
 Mcu.Pin7=PC5
 Mcu.Pin8=PB2
 Mcu.Pin9=PB10
-Mcu.PinsNb=34
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -89,9 +93,9 @@ MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
-NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
-NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:false
+NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:false
+NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.I2C3_EV_IRQn=true\:5\:0\:true\:false\:true\:true\:true
@@ -105,7 +109,7 @@ NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:true\:false\:true\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UART4_IRQn=true\:5\:0\:true\:false\:true\:true\:true
-NVIC.USB_LP_IRQn=true\:5\:0\:true\:false\:true\:true\:true
+NVIC.USB_LP_IRQn=true\:5\:0\:true\:false\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA11.Locked=true
 PA11.Mode=Device
@@ -197,9 +201,13 @@ PC4.Signal=USART1_TX
 PC5.Locked=true
 PC5.Mode=Asynchronous
 PC5.Signal=USART1_RX
+PC8.GPIOParameters=GPIO_Pu
+PC8.GPIO_Pu=GPIO_NOPULL
 PC8.Locked=true
 PC8.Mode=I2C
 PC8.Signal=I2C3_SCL
+PC9.GPIOParameters=GPIO_Pu
+PC9.GPIO_Pu=GPIO_NOPULL
 PC9.Locked=true
 PC9.Mode=I2C
 PC9.Signal=I2C3_SDA
@@ -237,7 +245,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-true-HAL-false,4-MX_FDCAN2_Init-FDCAN2-true-HAL-false,5-MX_FDCAN3_Init-FDCAN3-true-HAL-false,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_USB_PCD_Init-USB-true-HAL-false,12-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_FDCAN1_Init-FDCAN1-true-HAL-true,false-4-MX_FDCAN2_Init-FDCAN2-true-HAL-true,false-5-MX_FDCAN3_Init-FDCAN3-true-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,false-11-MX_USB_PCD_Init-USB-true-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADC12Freq_Value=160000000
 RCC.ADC345Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -263,7 +271,7 @@ RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
 RCC.I2SFreq_Value=160000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANCLockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANCLockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
@@ -277,6 +285,8 @@ RCC.PLLRCLKFreq_Value=160000000
 RCC.PWRFreq_Value=160000000
 RCC.QSPIFreq_Value=160000000
 RCC.RNGFreq_Value=48000000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.SAI1Freq_Value=160000000
 RCC.SYSCLKFreq_VALUE=160000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -294,6 +304,10 @@ USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim1.Mode=TIM1
