--- a/CANNEDPI_SW_GSUSB_CANFD.ioc
+++ b/CANNEDPI_SW_GSUSB_CANFD.ioc
@@ -68,24 +68,25 @@ Mcu.Pin22=PA14
 Mcu.Pin23=PA15
 Mcu.Pin24=PC10
 Mcu.Pin25=PC11
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8-BOOT0
+Mcu.Pin26=PB3
+Mcu.Pin27=PB5
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_RTC_VS_RTC_Activate
-Mcu.Pin32=VP_RTC_VS_RTC_Calendar
-Mcu.Pin33=VP_SYS_VS_tim1
-Mcu.Pin34=VP_SYS_VS_DBSignals
-Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin30=PB8-BOOT0
+Mcu.Pin31=PB9
+Mcu.Pin32=VP_RTC_VS_RTC_Activate
+Mcu.Pin33=VP_RTC_VS_RTC_Calendar
+Mcu.Pin34=VP_SYS_VS_tim1
+Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PC4
 Mcu.Pin7=PC5
 Mcu.Pin8=PB2
 Mcu.Pin9=PB10
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -96,6 +97,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:false
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:false
 NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:false
+NVIC.FLASH_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.I2C3_EV_IRQn=true\:5\:0\:true\:false\:true\:true\:true
@@ -165,6 +167,10 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=FDCAN2_TERM_EN
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=LIN1_NSLP
+PB3.Locked=true
+PB3.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LED1_LEGACY
 PB5.Locked=true
@@ -212,10 +218,8 @@ PC9.Locked=true
 PC9.Mode=I2C
 PC9.Signal=I2C3_SDA
 PF0-OSC_IN.Locked=true
-PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Locked=true
-PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -245,7 +249,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_FDCAN1_Init-FDCAN1-true-HAL-true,false-4-MX_FDCAN2_Init-FDCAN2-true-HAL-true,false-5-MX_FDCAN3_Init-FDCAN3-true-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,false-11-MX_USB_PCD_Init-USB-true-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,false-3-MX_FDCAN1_Init-FDCAN1-true-HAL-true,false-4-MX_FDCAN2_Init-FDCAN2-true-HAL-true,false-5-MX_FDCAN3_Init-FDCAN3-true-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_UART4_Init-UART4-true-HAL-false,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,false-11-MX_USB_PCD_Init-USB-true-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADC12Freq_Value=160000000
 RCC.ADC345Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -300,6 +304,8 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=320000000
 TIM6.IPParameters=Prescaler
 TIM6.Prescaler=1600-1
+UART4.BaudRate=10417
+UART4.IPParameters=BaudRate
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
